--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,12 @@ body {
   margin: 0;
   min-width: 320px;
   min-height: 100vh;
-  background-color: #f2f0ec;
+  background-color: var(--theme-khaki);
+  overflow-x: hidden;
+}
+
+html {
+  overflow-x: hidden;
 }
 
 #root {
